<resources>
    <string name="app_name">Memory</string>

    <string name="media_image_description">media image</string>

    <string name="permission_denied">Please granted permissions!</string>

    <!--home activity-->
    <string name="ac_home_tab_photo">Photos</string>
    <string name="ac_home_tab_album">Albums</string>

    <!--albums fragment-->
    <string name="fg_album_intelligent_album">Intelligent Albums</string>
    <string name="fg_album_intelligent_album_person">Person</string>
    <string name="fg_album_intelligent_album_thing">Thing</string>
    <string name="fg_album_intelligent_album_location">Location</string>

    <string name="fg_album_sort_album">Sort Albums</string>
    <string name="fg_album_personal_album">Personal Albums</string>
    <string name="fg_album_photo_total">%1$d Pics</string>

    <!--home bottom nav-->
    <string name="ac_home_bottom_nav_photos">照片</string>
    <string name="ac_home_bottom_nav_albums">相册</string>
    <string name="ac_home_bottom_nav_discover">探索</string>
    <string name="ac_home_bottom_nav_mine">我的</string>

    <!--壁纸预览-->
    <string name="wallpaper_preview_rotate">向右旋转</string>
    <string name="wallpaper_preview_set_wallpaper">设为壁纸</string>
    <string name="wallpaper_preview_set_wallpaper_loading_content">正在设置壁纸，请稍候…</string>
    <string name="wallpaper_preview_set_wallaper_success">壁纸设置成功</string>
    <string name="wallpaper_preview_set_wallaper_fail">壁纸设置失败</string>

    <!--照片信息弹窗-->
    <string name="dialog_photo_info_title">照片信息</string>
    <string name="dialog_photo_info_date">时间</string>
    <string name="dialog_photo_info_type">类型</string>
    <string name="dialog_photo_info_dimensions">尺寸</string>
    <string name="dialog_photo_info_size">大小</string>
    <string name="dialog_photo_info_path">路径</string>
    <string name="dialog_photo_info_dimensions_format">%1$d&#160;x&#160;%2$d</string>

    <!--提示弹窗-->
    <string name="dialog_tip_sure">确定</string>
    <string name="dialog_tip_cancel">取消</string>

    <!--删除图片弹窗-->
    <string name="delete_photo_tip_content">确定删除此照片吗？删除后不可恢复。</string>

    <!--照片编辑-->
    <string name="photo_edit_cancel">取消</string>
</resources>
